新增Cesium迁徙图效果(MapV) Signed-off-by: lc <905807873@qq.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: licheng
  * @Date: 2021-07-12 16:05:43
  * @LastEditors: licheng
- * @LastEditTime: 2021-11-26 10:46:27
+ * @LastEditTime: 2021-12-08 11:29:01
 -->
 <!DOCTYPE html>
 <html>
@@ -14,6 +14,7 @@
   <script src="static/Cesium/Build/Cesium/Cesium.js"> </script>
   <link href="static/Cesium/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css">
+  <script src="http://mapv.baidu.com/build/mapv.min.js"></script>
   <script src="https://js.arcgis.com/4.20/"></script>
   <title>师大教育APP管理后台</title>
   </script>
