--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  * @Author: licheng
  * @Date: 2021-07-12 16:05:43
  * @LastEditors: licheng
- * @LastEditTime: 2021-12-17 16:35:09
+ * @LastEditTime: 2022-09-14 11:49:57
 -->
 <!DOCTYPE html>
 <html>
@@ -14,11 +14,18 @@
   <script src="static/Cesium/Build/Cesium/Cesium.js"> </script>
   <script src="static/threejs/three.js"></script>
   <link href="static/Cesium/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://js.arcgis.com/4.20/esri/themes/light/main.css">
+  <link rel="stylesheet" href="https://js.arcgis.com/4.23/esri/themes/light/main.css">
+  <link rel="stylesheet" href="https://unpkg.com/maptalks/dist/maptalks.css">
   <script src="http://mapv.baidu.com/build/mapv.min.js"></script>
-  <script src="https://js.arcgis.com/4.20/"></script>
+  <!-- <script type="text/javascript" src="https://maptalks.org/script/maptalks/maptalks.min.js"></script>
+  <script type="text/javascript" src="https://maptalks.org/gallery/common/maptalks.webgl.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/maptalks.animatemarker/dist/maptalks.animatemarker.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/@turf/turf@6/turf.min.js"></script> -->
+  <script src="https://cdn.jsdelivr.net/npm/@turf/turf@6/turf.min.js"></script>
+
+
+  <script src="https://js.arcgis.com/4.23/"></script>
   <title>师大教育APP管理后台</title>
-  </script>
 </head>
 
 <body>
